--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,4 @@
 ---
-import Search from 'astro-pagefind/components/Search';
-
 import { SITE_DESCRIPTION, SITE_TITLE } from '~/consts';
 
 import HeaderLink from './HeaderLink.astro';
@@ -36,15 +34,11 @@ const { background = true, class: className } = Astro.props;
 			<HeaderLink href="/blog" text="Blog" />
 			<HeaderLink href="/pronouns" text="My Pronouns" />
 		</ol>
-		<Search
-			className="focus-within:absolute focus-within:left-1/4 focus-within:right-1/4"
-			uiOptions={{ showImages: false }}
-		/>
 	</nav>
 </header>
 
 <style>
 	:root {
-		--pagefind-ui-primary: theme(colors.violet.400);
+		--pagefind-ui-primary: var(--colors-violet-400);
 	}
 </style>
