--- a/src/components/PostMeta.astro
+++ b/src/components/PostMeta.astro
@@ -9,7 +9,10 @@ interface Props {
 const { categories = [], date } = Astro.props;
 ---
 
-<div class="mt-4 mb-10 flex flex-col text-base font-light sm:flex-row sm:gap-1">
+<div
+	class="mt-4 mb-10 flex flex-col text-base font-light sm:flex-row sm:gap-1"
+	data-pagefind-sort={`date:${date.toISOString()}`}
+>
 	<slot />
 	<FormattedDate date={date} />
 	{
@@ -31,7 +34,12 @@ const { categories = [], date } = Astro.props;
 								href={`/category/${category.replaceAll(' ', '-')}`}
 								itemprop="url"
 							>
-								<span itemprop="name">{category}</span>
+								<span
+									data-pagefind-filter="category"
+									itemprop="name"
+								>
+									{category}
+								</span>
 							</a>
 						</li>
 					))}
