--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -7,6 +7,9 @@ type Props<Tag extends HTMLTag> = {
 const { as: Component = 'article', class: className } = Astro.props;
 ---
 
-<Component class:list={['prose mx-auto max-w-[65ch] p-10', className]}>
+<Component
+	class:list={['prose mx-auto max-w-[65ch] p-10', className]}
+	data-pagefind-body
+>
 	<slot />
 </Component>
