fix RSS bug and add discovery

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -23,6 +23,12 @@ const { description, image = '/blog-placeholder-1.jpg', title } = Astro.props;
 <link href="/favicon.svg" rel="icon" type="image/svg+xml" />
 <meta content={Astro.generator} name="generator" />
 <link href="/sitemap-index.xml" rel="sitemap" />
+<link
+	href="/rss.xml"
+	rel="alternate"
+	title="RSS Feed"
+	type="application/rss+xml"
+/>
 
 <!-- Font preloads -->
 <link
