--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import type { ImageMetadata } from 'astro';
 import type { HTMLAttributes } from 'astro/types';
 
 import BaseHead from '~/components/BaseHead.astro';
@@ -10,6 +11,7 @@ import { SITE_DESCRIPTION, SITE_TITLE } from '~/lib/constants';
 interface Props extends HTMLAttributes<'main'> {
 	class?: string;
 	description?: string;
+	image?: ImageMetadata;
 	noStars?: boolean;
 	title?: string;
 }
@@ -17,6 +19,7 @@ interface Props extends HTMLAttributes<'main'> {
 const {
 	class: className = '',
 	description = SITE_DESCRIPTION,
+	image,
 	noStars = false,
 	title: propTitle,
 	...attributes
@@ -32,14 +35,14 @@ if (propTitle) {
 
 <html lang="en">
 	<head>
-		<BaseHead description={description} title={title} />
+		<BaseHead description={description} image={image} title={title} />
 	</head>
 	<body
 		class="font-weight-normal flex flex-col bg-black font-serif text-lg text-white"
 	>
 		<main
 			{...attributes}
-			class:list={['order-2 mx-auto px-10 xl:max-w-screen-xl', className]}
+			class:list={['order-2 mx-auto px-10 xl:max-w-7xl', className]}
 			itemid={Astro.url.toString()}
 			itemref="author"
 			itemscope
