--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -9,9 +9,8 @@ import type { ImageMetadata } from 'astro';
 import sourceSerif4 from '@fontsource-variable/source-serif-4/files/source-serif-4-latin-standard-normal.woff2?url';
 import { Seo } from 'astro-seo-meta';
 import { getImage } from 'astro:assets';
-import colors from 'tailwindcss/colors';
 
-import { FEDI_USER } from '~/lib/constants';
+import { FEDI_USER, themeColor } from '~/lib/constants';
 import { toAbsoluteUrl } from '~/lib/urls';
 
 interface Props {
@@ -23,13 +22,24 @@ interface Props {
 const { description, image, title } = Astro.props;
 
 const canonicalURL = toAbsoluteUrl(Astro.url.pathname);
-const themeColor = colors.violet[400];
 
 const fbImage = image
-	? await getImage({ format: 'jpg', height: 566, src: image, width: 1080 })
+	? await getImage({
+			format: 'jpg',
+			height: 566,
+			src: image,
+			tint: true,
+			width: 1080,
+		})
 	: null;
 const twitterImage = image
-	? await getImage({ format: 'jpg', height: 720, src: image, width: 1080 })
+	? await getImage({
+			format: 'jpg',
+			height: 720,
+			src: image,
+			tint: true,
+			width: 1080,
+		})
 	: null;
 ---
 
