--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -4,19 +4,43 @@
 import '../styles/global.css';
 
 import '@fontsource-variable/source-serif-4';
-import sourceSerif4 from '@fontsource-variable/source-serif-4/files/source-serif-4-latin-standard-normal.woff2?url';
+import type { ImageMetadata } from 'astro';
 
-import { FEDI_USER } from '~/lib/constants';
+import sourceSerif4 from '@fontsource-variable/source-serif-4/files/source-serif-4-latin-standard-normal.woff2?url';
+import { Seo } from 'astro-seo-meta';
+import { getImage } from 'astro:assets';
+
+import { FEDI_USER, themeColor } from '~/lib/constants';
+import { toAbsoluteUrl } from '~/lib/urls';
 
 interface Props {
 	description: string;
-	image?: string;
+	image?: ImageMetadata;
 	title: string;
 }
 
-const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+const { description, image, title } = Astro.props;
 
-const { description, image = '/blog-placeholder-1.jpg', title } = Astro.props;
+const canonicalURL = toAbsoluteUrl(Astro.url.pathname);
+
+const fbImage = image
+	? await getImage({
+			format: 'jpg',
+			height: 566,
+			src: image,
+			tint: true,
+			width: 1080,
+		})
+	: null;
+const twitterImage = image
+	? await getImage({
+			format: 'jpg',
+			height: 720,
+			src: image,
+			tint: true,
+			width: 1080,
+		})
+	: null;
 ---
 
 <!-- Global Metadata -->
@@ -45,23 +69,22 @@ const { description, image = '/blog-placeholder-1.jpg', title } = Astro.props;
 <link href={canonicalURL} rel="canonical" />
 
 <!-- Primary Meta Tags -->
-<title>{title}</title>
-<meta content={title} name="title" />
-<meta content={description} name="description" />
-
-<!-- Open Graph / Facebook -->
-<meta content="website" property="og:type" />
-<meta content={Astro.url} property="og:url" />
-<meta content={title} property="og:title" />
-<meta content={description} property="og:description" />
-<meta content={new URL(image, Astro.url)} property="og:image" />
-
-<!-- Twitter -->
-<meta content="summary_large_image" property="twitter:card" />
-<meta content={Astro.url} property="twitter:url" />
-<meta content={title} property="twitter:title" />
-<meta content={description} property="twitter:description" />
-<meta content={new URL(image, Astro.url)} property="twitter:image" />
+<Seo
+	colorScheme="dark"
+	description={description}
+	facebook={{
+		image: toAbsoluteUrl(fbImage?.src),
+		type: 'website',
+		url: canonicalURL,
+	}}
+	keywords={['blog']}
+	themeColor={themeColor}
+	title={title}
+	twitter={{
+		card: 'summary_large_image',
+		image: toAbsoluteUrl(twitterImage?.src),
+	}}
+/>
 
 <!-- Fediverse -->
 <meta content={FEDI_USER} name="fediverse:creator" />
